upgrade(tasks): added link to extensions

--- a/0.3/time/evaluative_priming.html
+++ b/0.3/time/evaluative_priming.html
@@ -94,12 +94,15 @@
 </li>
 </ul>
 <p> You can find the images used for this task <a href="https://github.com/minnojs/minno-time/tree/gh-pages/images">here</a>.</p>
+<p> <strong> This example is intended for educational purposes only. If you want to actually use this type of task, please see the <a href="https://app-prod-03.implicit.harvard.edu/implicit/common/all/js/pip/piscripts/ydocs/dist/index.html">extensions page</a>. </strong></p>
 <section playground>
     <div class="buttons">
         <a class="activate-button">Activate</a>
         <a class="download-button" href="evaluative_priming.js" download>Download</a>
     </div>
     <div class="editor">// You can find the images used for this task [here](https://github.com/minnojs/minno-time/tree/gh-pages/images).
+//
+// ** This example is intended for educational purposes only. If you want to actually use this type of task, please see the [extensions page](https://app-prod-03.implicit.harvard.edu/implicit/common/all/js/pip/piscripts/ydocs/dist/index.html). **
 define([&apos;pipAPI&apos;,&apos;pipScorer&apos;], function(APIConstructor,Scorer) {
 
 	var API = new APIConstructor();
