--- a/0.3/time/amp.html
+++ b/0.3/time/amp.html
@@ -95,6 +95,7 @@
 </ul>
 <p> This example creates an amp task.</p>
 <p> You can find the images used for this task <a href="https://github.com/minnojs/minno-time/tree/gh-pages/images">here</a></p>
+<p> <strong> This example is intended for educational purposes only. If you want to actually use this type of task, please see the <a href="https://app-prod-03.implicit.harvard.edu/implicit/common/all/js/pip/piscripts/ydocs/dist/index.html">extensions page</a>. </strong></p>
 <section playground>
     <div class="buttons">
         <a class="activate-button">Activate</a>
@@ -103,6 +104,8 @@
     <div class="editor">// This example creates an amp task.
 // 
 // You can find the images used for this task [here](https://github.com/minnojs/minno-time/tree/gh-pages/images)
+//
+// ** This example is intended for educational purposes only. If you want to actually use this type of task, please see the [extensions page](https://app-prod-03.implicit.harvard.edu/implicit/common/all/js/pip/piscripts/ydocs/dist/index.html). **
 define([&apos;pipAPI&apos;], function(APIconstructor) {
 
     var API = new APIconstructor();
