--- a/example/index.html
+++ b/example/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, initial-scale=1" />
 
-        <link type="text/css" rel="Stylesheet" href="../src/time.css"/>
+        <link type="text/css" rel="Stylesheet" href="../dist/time.css"/>
 
 		<style type="text/css">
 			/* http://www.sitepoint.com/css3-responsive-centered-image/ */
