--- a/0.3/time/API.html
+++ b/0.3/time/API.html
@@ -57,7 +57,6 @@
 </li>
 </ul>
 </li>
-<li><a href="#inheritance">Inheritance</a></li>
 <li><a href="#logging">Logging</a></li>
 </ul>
 </li>
@@ -460,7 +459,7 @@ Resets trial timer. The latency of any events from here on (including the curren
 <li><code>{type:&#39;resetTimer&#39;}</code></li>
 </ul>
 <p><strong>endTrial</strong>:
-*Speaks for itself (note that any actions that come after this is called may not work properly).</p>
+End this trial (note that any actions that come after this is called may not work properly).</p>
 <ul>
 <li><code>{type:&#39;endTrial&#39;}</code></li>
 </ul>
@@ -491,210 +490,6 @@ Responsible for the next trial we go to. This action will be executed only after
 <li><code>{type:&#39;goto&#39;,destination: &#39;end&#39;}</code> end this task</li>
 <li><code>{type:&#39;goto&#39;,destination: &#39;nextWhere&#39;, properties: {blockStart:true}}</code> goto the next trial that has these properties</li>
 <li><code>{type:&#39;goto&#39;,destination: &#39;previousWhere&#39;, properties: {blockStart:true}}</code> goto the previous trial that has these properties</li>
-</ul>
-<h3><a name="inheritance" class="header-link" href="#inheritance"><span></span></a>Inheritance</h3><p>Each element in the miTime (trial/stimulus/media) can inherit its attributes from an element set.</p>
-<h4><a name="sets" class="header-link" href="#sets"><span></span></a>Sets</h4><p>The element sets are defined in the main task script under <code>trialSets</code>/<code>stimulusSets</code>/<code>mediaSets</code>. Or using using the API using <code>addMediaSets</code>/<code>addStimulusSets</code>/<code>addTrialSets</code>.</p>
-<p>Each set is simply an array of elements that can later be referred to as a base for new elements. Note that the name that you give the set (in the example, default or IAT) is the handle that you later use to refer to it.</p>
-<p>The examples here use trials as an example, the same principles apply to stimuli and media elements.</p>
-<pre><code class="lang-javascript">var task = {
-    // these are the trial sets
-    trialSets: {
-        // This is the first set, it has only one trial
-        default : [
-            defaultTrial
-        ],
-
-        // This is the second set it has three trials
-        // The first trial explicitly inherits the default trial and adds some data to it
-        IAT : [
-            {inherit:{set:default},data:{block:1}},
-            block02Trials,
-            block03Trials
-        ]
-    },
-
-    // these are the stimulus and media sets
-    stimulusSets : stimulusSets,
-    mediaSets : mediaSets
-}
-</code></pre>
-<h4><a name="inheriting" class="header-link" href="#inheriting"><span></span></a>Inheriting</h4><p>When inheriting an element the new element starts out with all of the parent&#39;s attributes and extends them with its own.
-This means that we use the parent element as a base and then copy in any properties that the child has, overwriting any existing properties.
-The only exception to this rule is their <code>data</code> objects which we attempt to merge (giving precedence again to the child).</p>
-<p>Follow this pseudo code:</p>
-<pre><code class="lang-javascript">// The parent trial
-{
-    data: {name: &#39;jhon&#39;, family:&#39;doe&#39;}
-    stimuli: [
-        stim1,
-        stim2
-    ]
-}
-
-// The child trial which attempts to inherit the parent
-{
-    inherit: &#39;parent&#39;,
-    data: {name: &#39;jack&#39;}
-    stimuli: [
-        stim1
-    ]
-}
-
-// The result would be:
-{
-    data: {name: &#39;jack&#39;, family:&#39;doe&#39;}  // the child kept its own name but inherited the family name
-    stimuli: [                          // the stimuli array was completely overwritten
-        stim1
-    ]
-}
-</code></pre>
-<p>In order for an element to inherit another element it must use the <code>inherit</code> property of the inheriting element.</p>
-<pre><code class="lang-javascript">{
-    inherit: inheritObject
-}
-</code></pre>
-<p>The inherit object has a <code>set</code> property defining which element set it should inherit from.
-It also has a <code>type</code> property that defines what type of inheritance we should use.</p>
-<p>We have implemented several types of inheritance:</p>
-<p><strong>random</strong>:
-Randomly picks an element from the set. Note that this is the default inheritance type and so it is not obligatory to use the <code>type</code> property. You can also use a short cut and set the <code>set</code> using a simple string instead of an object (see example below).</p>
-<ul>
-<li><code>&#39;setName&#39;</code></li>
-<li><code>{set: &#39;setName&#39;}</code></li>
-<li><code>{set: &#39;setName&#39;, type:&#39;random&#39;}</code></li>
-</ul>
-<p><strong>exRandom</strong>:
-Picks a random element without repeating the same element until we&#39;ve gone through the whole set</p>
-<ul>
-<li><code>{set: &#39;setName&#39;, type:&#39;exRandom&#39;}</code></li>
-</ul>
-<p><strong>bySequence</strong>:
-Picks the elements by the order they were inserted into the set</p>
-<ul>
-<li><code>{set: &#39;setName&#39;, type:&#39;bySequence&#39;}</code></li>
-</ul>
-<p><strong>byData</strong>:
-Picks a specific element from the set.
-We compare the <code>data</code> property to the <code>element.data</code> property and if <code>data</code> is a subset of <code>element.data</code> it picks the element
-(this means that if all properties of data property equal to the properties of the same name in element.data it is a fit).
-This function will pick only the first element to fit the data.
-If the data property is set as a string, we assume it refers to the element handle.</p>
-<ul>
-<li><code>{set: &#39;setName&#39;, type: &#39;byData&#39;, data: {block:1, row:2}}</code> picks the element with both block:1 and row:2</li>
-<li><code>{set: &#39;setName&#39;, type: &#39;byData&#39;, data: &quot;myStimHandle&quot;}</code> picks the element that has the &quot;myStimHandle&quot; handle</li>
-</ul>
-<p><strong>function</strong>:
-You may also use a custom function to pick your element.</p>
-<pre><code class="lang-javascript">{set: &#39;setName&#39;, type: function(definitions){
-    // definitions is the inherit object (including  set, type, and whatever other properties you&#39;d like to use)
-    // the context (&quot;this&quot;) is the element collection, it is a Backbone.html collection of the elements in the set
-}}
-</code></pre>
-<h4><a name="customization" class="header-link" href="#customization"><span></span></a>Customization</h4><p>Each trial/stimulus/media can also have a customize method, this method is called once the element is inherited but before it is activated.
-It accepts two arguments: the source object on which it is called (in this case the appropriate trial object), and the global object. The source object is also the context for the function.
-The example shows how you can use customize to push a stimulus into the trial, this allows us to generate stim1 dynamicaly.</p>
-<pre><code class="lang-javascript">{
-    inherit: &#39;something&#39;,
-    stimuli: [], // note that their are no stimuli yet!
-    customize : function(trialSource, globalObject){
-        // push a stimulus into the stimulus array
-        trialSource.stimuli.push(stim1);
-    }
-}
-</code></pre>
-<h3><a name="the-sequence" class="header-link" href="#the-sequence"><span></span></a>The sequence</h3><p>The sequence is an ordered list of the trials that you want to present consequently to the users.</p>
-<pre><code class="lang-javascript">task = {
-    trialSets: trialSets,
-    stimulusSets : stimulusSets,
-    mediaSets : mediaSets,
-    sequence: [
-        trial1,
-        trial2,
-        trial3
-    ]
-
-}
-</code></pre>
-<p>This is all you really need to know in order to run a task. In addition the sequencer provides several mixing options
-that allow for powerful randomization of your task.</p>
-<h4><a name="mixing" class="header-link" href="#mixing"><span></span></a>Mixing</h4><p>The mixer allows wrapping sub sequences in objects that allow you to manipulate the way in which they appear.
-You may insert such an object at any place within the sequence and it will be replaced by the appropriate trials.</p>
-<p>The basic structure of a mixer object is:</p>
-<pre><code class="lang-javascript">{
-    mixer: &#39;functionType&#39;,
-    data: [trial1, trial2]
-}
-</code></pre>
-<p>The <code>mixer</code> property holds the mixer type.</p>
-<p>The <code>data</code> property holds an array of elements (either trials or mixer objects).</p>
-<p>A sequence can look something like this (don&#39;t get scared it&#39;s simpler than it looks):</p>
-<pre><code class="lang-javascript">[
-    // The first trial to present.
-    firstTrial,
-
-    // Repeat the structure inside 10 time (so we get 40 trials)
-    {
-        mixer: &#39;repeat&#39;,
-        times: 10,
-        data: [
-            // Delay the mixing of these elements until after the `repeat`.
-            {
-                mixer: &#39;wrapper&#39;,
-                data: [
-                    trial1,
-                    // Randomize the order of the trials within.
-                    {
-                        mixer: &#39;random&#39;,
-                        data: [
-                            trial2,
-                            // Keep trial 3 and 4 together.
-                            {
-                                mixer: &#39;wrapper&#39;,
-                                data: [
-                                    trial3,
-                                    trial4
-                                ]
-                            }
-                        ]
-                    } // end random
-                ]
-            } // end wrapper
-        ]
-    }, // end repeat
-
-    // the last trial to present
-    lastTrial
-]
-</code></pre>
-<p>This sequence has an opening and ending trial (<code>firstTrial</code> and <code>lastTrial</code>).
-Between them them we repeat a set of four trials ten times.
-The order of the four trials is randomized, so that <code>trial1</code> always comes first and the order of the following trials are randomized but <code>trial3</code> and <code>trial4</code> are wrapped together and therefore always stay consecutive.</p>
-<p>We support several mixer types.</p>
-<p><strong>repeat</strong>:
-Repeats the element in <code>data</code> <code>times</code> times.</p>
-<ul>
-<li><code>{mixer:&#39;repeat&#39;, times:10, data: [trial1,trial2]}</code></li>
-</ul>
-<p><strong>random</strong>:
-Randomizes the order of elements in <code>data</code>.</p>
-<ul>
-<li><code>{mixer:&#39;random&#39;, data: [trial1,trial2]}</code></li>
-</ul>
-<p><strong>weightedRandom</strong>:
-Picks a single element using a weighted random algorithm. Each element in <code>data</code> is given the appropriate weight from <code>weights</code>. In the following example trial2 has four times the probability of being picked as trial1.</p>
-<ul>
-<li><code>{mixer:&#39;weightedRandom&#39;, weights: [0.2,0.8], data: [trial1,trial2]}</code></li>
-</ul>
-<p><strong>choose</strong>:
-Picks <code>n</code> random elements from <code>data</code> (by default the chooser picks one element).</p>
-<ul>
-<li><code>{mixer:&#39;choose&#39;, data: [trial1,trial2]}</code> pick one of these two trials</li>
-<li><code>{mixer:&#39;choose&#39;, n:2, data: [trial1,trial2,trial3]}</code> pick two of these three trials</li>
-</ul>
-<p><strong>wrapper</strong>:
-The wrapper mixer serves a sort of parenthesis for the mixer. It has two primary functions; first, in case you want to keep a set of elements as a block (when randomizing) simply wrap them and they&#39;ll stay together. Second, when repeating a <code>random</code> mixer, the mixer first randomizes the content of the inner mixer and only then repeats it. If you want the randomization to be deferred until after the repeat all you have to do is wrap it in a wrapper.</p>
-<ul>
-<li><code>{mixer:&#39;wrapper&#39;, data: [trial1,trial2]}</code></li>
 </ul>
 <h3><a name="changing-settings" class="header-link" href="#changing-settings"><span></span></a>Changing Settings</h3><p>Player wide settings are set within the &quot;settings&quot; property of the task JSON.</p>
 <pre><code class="lang-javascript">settings = {
