feat(messages): created a trial level messages stream

--- a/example/index.html
+++ b/example/index.html
@@ -30,6 +30,7 @@
 
 		<script src="require.min.js"></script>
 		<script type="text/javascript">
+            DEBUG = true;
             require.config({
                 //paths: { underscore: 'lodash' }
                 map: {
