chore(examples): added warning

--- a/0.3/time/gnat.html
+++ b/0.3/time/gnat.html
@@ -33,7 +33,7 @@
                         </script>
                         <gcse:searchbox-only></gcse:searchbox-only>
                     </div>
-                    <select id="version-select"><option value="0.3" selected>v0.3</option>,<option value="0.4" >v0.4</option></select>
+                    <select id="version-select"><option value="0.3" selected>v0.3</option></select>
 					<a href="https://github.com/minnojs">Github</a>
 				</nav>
 			</section>
@@ -95,6 +95,7 @@
 </ul>
 <p> You can find the images used for this task <a href="https://github.com/minnojs/minno-time/tree/gh-pages/images">here</a>
  and the templates <a href="https://github.com/minnojs/minno-time/tree/gh-pages/resources/GNAT">here</a>.</p>
+<p> <strong> This example is intended for educational purposes only. If you want to actually use this type of task, please see the <a href="https://app-prod-03.implicit.harvard.edu/implicit/common/all/js/pip/piscripts/ydocs/dist/index.html">extensions page</a>. </strong></p>
 <section playground>
     <div class="buttons">
         <a class="activate-button">Activate</a>
@@ -102,6 +103,8 @@
     </div>
     <div class="editor">// You can find the images used for this task [here](https://github.com/minnojs/minno-time/tree/gh-pages/images)
 // and the templates [here](https://github.com/minnojs/minno-time/tree/gh-pages/resources/GNAT).
+//
+// ** This example is intended for educational purposes only. If you want to actually use this type of task, please see the [extensions page](https://app-prod-03.implicit.harvard.edu/implicit/common/all/js/pip/piscripts/ydocs/dist/index.html). **
 define([&apos;pipAPI&apos;,&apos;pipScorer&apos;], function(APIConstructor,Scorer) {
 
     var API = new APIConstructor(&apos;plainIAT&apos;);
