--- a/0.5/time/API.html
+++ b/0.5/time/API.html
@@ -228,13 +228,13 @@ Each input object must include both a <code>handle</code> and an <code>on</code>
 <ul>
 <li><code>{handle:&#39;right&#39;,on:&#39;mousedown&#39;,stimHandle:&#39;myStimHandle&#39;}</code></li>
 </ul>
-<p><strong>mouseenter</strong>: Takes a stimulus handle (<code>stimHandle</code>). Triggers each time the mouse enters the space of the target object. (note that this behaviour is meaningless in touch devices)</p>
+<p><strong>mouseover</strong>: Takes a stimulus handle (<code>stimHandle</code>). Triggers each time the mouse enters the space of the target object. (note that this behaviour is meaningless in touch devices)</p>
 <ul>
-<li><code>{handle:&#39;right&#39;,on:&#39;mouseenter&#39;,stimHandle:&#39;myStimHandle&#39;}</code></li>
+<li><code>{handle:&#39;right&#39;,on:&#39;mouseover&#39;,stimHandle:&#39;myStimHandle&#39;}</code></li>
 </ul>
-<p><strong>mouseleave</strong>: Takes a stimulus handle (<code>stimHandle</code>). Triggers each time the mouse leaves the space of the target object. (note that this behaviour is meaningless in touch devices)</p>
+<p><strong>mouseout</strong>: Takes a stimulus handle (<code>stimHandle</code>). Triggers each time the mouse leaves the space of the target object. (note that this behaviour is meaningless in touch devices)</p>
 <ul>
-<li><code>{handle:&#39;right&#39;,on:&#39;mouseleave&#39;,stimHandle:&#39;myStimHandle&#39;}</code></li>
+<li><code>{handle:&#39;right&#39;,on:&#39;mouseout&#39;,stimHandle:&#39;myStimHandle&#39;}</code></li>
 </ul>
 <p><strong>timeout</strong>: Takes a <code>duration</code> property and fires after the duration passes</p>
 <ul>
