--- a/0.5/time/resources.html
+++ b/0.5/time/resources.html
@@ -94,7 +94,9 @@
 </li>
 </ul>
 <h3><a name="extensions" class="header-link" href="#extensions"><span></span></a>Extensions</h3><p>The PI tasks are easily extensible.</p>
-<p><a href="http://www.bgu.ac.il/~baranany/">Yoav Bar-Anan</a> from <a href="https://implicit.harvard.edu/implicit/aboutus.html">Project Implicit</a> has created several extensions for the easy creation of a few common reaction-time tasks. You can find the instructions for using them right <a href="https://app-prod-03.implicit.harvard.edu/implicit/common/all/js/pip/piscripts/ydocs/dist/index.html">here</a>.</p>
+<p><a href="http://www.bgu.ac.il/~baranany/">Yoav Bar-Anan</a> from <a href="https://implicit.harvard.edu/implicit/aboutus.html">Project Implicit</a>
+has created several extensions for the easy creation of a few common reaction-time tasks. 
+You can find the instructions for using them right <a href="https://github.com/baranan/minno-tasks/blob/master/implicitmeasures.html">here</a>.</p>
 
 				<hr />
 				<small>License: Apache 2. &copy; Project Implicit. &middot; Current version [version]</small>
